Exclude generator templates from rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,7 @@ AllCops:
     - '**/dummy/**/*'
     - '**/vendor/**/*'
     - '**/spec_helper.rb'
+    - '**/templates/**/*'
 
 Layout/MultilineOperationIndentation:
   EnforcedStyle: indented
