Exclude routes.rb from Rubocop's BlockLength

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -53,6 +53,7 @@ BlockLength:
     - '**/spec/**/*'
     - '**/*.rake'
     - '**/factories/**/*'
+    - '**/config/routes.rb'
 
 Metrics/AbcSize:
  Max: 45
