Disable Rubocop's NumericPredicate

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -110,6 +110,9 @@ Style/UnneededPercentQ:
 Lint/ParenthesesAsGroupedExpression:
   Enabled: false
 
+Style/NumericPredicate:
+  Enabled: false
+
 Metrics/PerceivedComplexity:
   Max: 10
 
