Changed API V2 Cart Empty endpoint to PATCH

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -148,7 +148,7 @@ paths:
         - bearerAuth: []
 
   '/cart/empty':
-    post:
+    patch:
       description: Empties the order
       tags:
         - Cart
