Expose slug and options text in LineItem serializer for Storefront API v2
Line items should be denormalized so we can limit the need to fetch additional resources

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -770,6 +770,12 @@ components:
                 quantity:
                   type: integer
                   example: 1
+                slug:
+                  type: string
+                  example: 'sample-product'
+                options_text:
+                  type: string
+                  example: 'Size: small, Color: red'
                 price:
                   type: string
                   example: '125.0'
